# slay-the-spire2-agent

./: .gitignore  AGENTS.md  README.md  README.zh.md  global.json  pyproject.toml
docs/: local-development.md  ollama-integration-and-training.md  prototype-validation.md  sts2-mod-agent-compatibility.md  sts2-mod-local-development.md  sts2-mod-upgrade-notes.md
mod/Sts2Mod.StateBridge/: Sts2Mod.StateBridge.csproj
mod/Sts2Mod.StateBridge.Host/: Program.cs  Sts2Mod.StateBridge.Host.csproj
mod/Sts2Mod.StateBridge.Tests/: AgentStatusStateStoreTests.cs  MenuPhaseBridgeTests.cs  RewardPhaseDetectionTests.cs  RuntimeCardIdentityTests.cs  RuntimeTextResolverTests.cs
mod/Sts2Mod.StateBridge/Configuration/: BridgeOptions.cs  Sts2InstallationLocator.cs
mod/Sts2Mod.StateBridge/Contracts/: Models.cs  (+1 more)
openspec/: config.yaml
src/sts2_agent/: __init__.py  ids.py  live_autoplay.py  models.py  orchestrator.py  trace.py
tests/: test_bridge.py  test_full_battle_validation.py  test_live_apply_validation.py  test_live_autoplay.py  test_mcts_integration.py  test_mcts_logic.py  test_mcts_nn.py  test_mcts_target_selection.py  test_orchestrator.py  test_policy_llm.py  test_reward_map_next_battle.py
tools/: build_mod_pck.py  debug_sts2_mod.py  export_training_data.py  inspect_menu_actions.py  run_llm_autoplay.py  run_mcts_autoplay.py  train_mcts_model.py  validate_full_battle_llm.py  validate_live_apply.py  validate_menu_run_start.py  validate_mod_bridge.py  validate_mod_pck.py  validate_reward_map_next_battle.py  write_mod_manifest.py
tools/Sts2TypeDump/: Program.cs
(+208 files in other folders)
